# StateJobsNY-Alerts

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: job-alert.yml  pages.yml
app/job_alert/: __init__.py  cli.py  client.py  config.py  exceptions.py  filters.py  logging_config.py  models.py  notifier.py  parser.py  service.py  storage.py
config/: config.example.yaml  config.yaml
data/: seen_jobs.json
docs/: SECRETS.md
templates/: job_alert.html
tests/: conftest.py  test_api_notifier.py  test_config.py  test_filters.py  test_notifier.py  test_parser.py  test_service.py  test_storage.py
web/: app.js  config.js  grade.css  index.html  styles.css  visibility.css
worker/: package-lock.json  package.json  schema.sql  wrangler.toml
worker/src/: index.js
