[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "ny-state-job-alerts"
version = "1.0.0"
description = "Reliable NY State vacancy monitoring and email alerts"
requires-python = ">=3.12"
dependencies = [
  "beautifulsoup4==4.12.3",
  "Jinja2==3.1.4",
  "PyYAML==6.0.2",
  "requests==2.32.3",
]

[project.scripts]
ny-job-alert = "job_alert.cli:main"

[tool.setuptools]
package-dir = {"" = "app"}

[tool.setuptools.packages.find]
where = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers"

[tool.ruff]
line-length = 100
target-version = "py312"

